Bug 40693 - [945GM] Xv hangs GPU
Summary: [945GM] Xv hangs GPU
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-09-07 11:42 UTC by Paul Neumann
Modified: 2011-09-07 12:29 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
i915_error_state from debugfs after the GPU has hung (739.83 KB, text/plain)
2011-09-07 11:42 UTC, Paul Neumann
no flags Details
Backtrace of X's segfault (3.81 KB, text/plain)
2011-09-07 11:43 UTC, Paul Neumann
no flags Details

Description Paul Neumann 2011-09-07 11:42:43 UTC
Created attachment 50962 [details]
i915_error_state from debugfs after the GPU has hung

Hi

When I use Xv as the video output for mplayer (command line "-vo xv"), the GPU immediately hangs. This only happens with xf86-video-intel from git and SNA enabled. Using Xv with UXA works fine (with DDX from git and 2.15).

dmesg says the GPU is hung:

[  237.939989] [drm:i915_hangcheck_elapsed] *ERROR* Hangcheck timer elapsed... GPU hung
[  237.939999] [drm] capturing error event; look for more information in /debug/dri/0/i915_error_state
[  237.941102] [drm:i915_wait_request] *ERROR* i915_wait_request returns -11 (awaiting 11893 at 11892, next 11894)


Afterwards, when I start mplayer with Xv output again after the GPU hung the way I described above, X segfaults.



My card is

00:02.0 VGA compatible controller: Intel Corporation Mobile 945GM/GMS,
943/940GML Express Integrated Graphics Controller (rev 03)
00:02.1 Display controller: Intel Corporation Mobile 945GM/GMS/GME, 943/940GML
Express Integrated Graphics Controller (rev 03)

and the kernel version is 3.0 (have not tested any other).
Comment 1 Paul Neumann 2011-09-07 11:43:26 UTC
Created attachment 50963 [details]
Backtrace of X's segfault
Comment 2 Chris Wilson 2011-09-07 11:57:24 UTC
Misread, and forgot I had used inline rects for SNA as well. Master should have had the segfault fixed already.
Comment 3 Chris Wilson 2011-09-07 12:29:44 UTC
commit afdb8aa89a88c62ccd5e26a3ed9adb70fec310a8
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Wed Sep 7 20:10:02 2011 +0100

    sna/gen3: Do not assume video updates are always vsync'ed
    
    In case the video is running async, then there may be subsequent
    instructions within the batch and so we do need to mark the clobbered
    state as dirty when setting up the video frame.
    
    Reported-by: Paul Neumann <paul104x@yahoo.de>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=40693
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.